--- a/lector1.html
+++ b/lector1.html
@@ -6,10 +6,9 @@
     <title>Leer código de barras con JavaScript by parzibyte</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-		<a href="//parzibyte.me/blog">By Parzibyte</a>
+  <body>		
 		<p id="resultado">Aquí aparecerá el código</p>
-		<p>A continuación, el contenedor: </p>
+		<p>Contenedor: </p>
 		<div id="contenedor"></div>
 		<!-- Cargamos Quagga y luego nuestro script -->
 		<script src="https://unpkg.com/quagga@0.12.1/dist/quagga.min.js"></script>
