--- a/lector1.html
+++ b/lector1.html
@@ -7,9 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>		
-		<p id="resultado">Aquí aparecerá el código</p>
+		<p id="resultado">Aquí aparecerá el código con estilo</p>
 		<p>Contenedor: </p>
-		<div id="contenedor"></div>
+		<div style = "height: 150px;width: 200px;" id="contenedor"></div>
 		<!-- Cargamos Quagga y luego nuestro script -->
 		<script src="https://unpkg.com/quagga@0.12.1/dist/quagga.min.js"></script>
     <script>
